# DUMSCPP_l4

./: CMakeLists.txt  CMakePresets.json  README.md  image.cpp  image.hpp  image_format_strategy.hpp  main.cpp  output_pgma.pgm  output_ppm.ppm  pgma_strategy.hpp  ppm_strategy.hpp
v2/: image.cpp  image.hpp  main.cpp  pgma_image.hpp  ppm_image.hpp
